sc/qa/unit/subsequent_export-test.cxx
@@ -244,6 +244,7 @@ public:
     void testTdf128976();
     void testTdf120502();
     void testTdf142578();
+    void testTdf145059();
 
     CPPUNIT_TEST_SUITE(ScExportTest);
     CPPUNIT_TEST(test);
@@ -384,6 +385,7 @@ public:
     CPPUNIT_TEST(testTdf128976);
     CPPUNIT_TEST(testTdf120502);
     CPPUNIT_TEST(testTdf142578);
+    CPPUNIT_TEST(testTdf145059);
 
     CPPUNIT_TEST_SUITE_END();
 
@@ -4837,6 +4839,45 @@ void ScExportTest::testTdf120502()
 }
 
 void ScExportTest::testTdf142578()
+{
+    ScDocShellRef xDocSh = loadDoc(u"tdf142578.", FORMAT_ODS);
+    CPPUNIT_ASSERT(xDocSh);
+
+    std::shared_ptr<utl::TempFile> pXPathFile
+        = ScBootstrapFixture::exportTo(&(*xDocSh), FORMAT_XLSX);
+    xmlDocPtr pSheet
+        = XPathHelper::parseExport(pXPathFile, m_xSFactory, "xl/worksheets/sheet1.xml");
+    CPPUNIT_ASSERT(pSheet);
+
+    // Get DxfId for color filter
+    sal_Int32 nDxfIdColorFilter
+        = getXPath(pSheet, "/x:worksheet/x:autoFilter/x:filterColumn/x:colorFilter", "dxfId")
+              .toInt32()
+          + 1;
+
+    // Get DxfId for conditional formatting
+    sal_Int32 nDxfIdCondFormat
+        = getXPath(pSheet, "/x:worksheet/x:conditionalFormatting/x:cfRule", "dxfId").toInt32() + 1;
+
+    // Ensure they are using different dxfs
+    CPPUNIT_ASSERT_MESSAGE("dxfID's should be different!", nDxfIdColorFilter != nDxfIdCondFormat);
+
+    // Check colors used by these dxfs
+    xmlDocPtr pStyles = XPathHelper::parseExport(pXPathFile, m_xSFactory, "xl/styles.xml");
+    CPPUNIT_ASSERT(pStyles);
+
+    OString sDxfColorFilterXPath("/x:styleSheet/x:dxfs/x:dxf[" + OString::number(nDxfIdColorFilter)
+                                 + "]/x:fill/x:patternFill/x:fgColor");
+    assertXPath(pStyles, sDxfColorFilterXPath, "rgb", "FF81D41A");
+
+    OString sDxfCondFormatXPath("/x:styleSheet/x:dxfs/x:dxf[" + OString::number(nDxfIdCondFormat)
+                                + "]/x:fill/x:patternFill/x:bgColor");
+    assertXPath(pStyles, sDxfCondFormatXPath, "rgb", "FFFFCCCC");
+
+    xDocSh->DoClose();
+}
+
+void ScExportTest::testTdf145059()
 {
     ScDocShellRef xDocSh = loadDoc(u"tdf142578.", FORMAT_ODS);
     CPPUNIT_ASSERT(xDocSh);
